<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/applogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_app_icn"/>
        <LinearLayout
            android:id="@+id/loginText"
            android:layout_below="@id/applogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="25sp"
                android:id="@+id/title"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#151C45"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_margin="25dp"
                android:textColor="#2979FF"
                android:text="@string/login_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputBox"
            android:layout_below="@id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/usernameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/edittext_bg_login"
                    android:elevation="1.5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/username"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:textColor="@color/textColor"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:clipToPadding="false"
                android:paddingBottom="10dp">
                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:background="@drawable/edittext_bg_login"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="17sp"
                    android:maxLines="1"
                    android:textColor="@color/textColor"
                    android:inputType="textPassword"
                    android:elevation="1.5dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:paddingStart="12dp" />

                <ImageButton
                    android:id="@+id/password_visibility_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="45dp"
                    android:background="@android:color/transparent"
                    android:elevation="1.5dp"
                    android:onClick="VisibilityToggle"
                    app:srcCompat="@drawable/ic_visibility_off" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:layout_below="@id/inputBox"
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="20dp"
            android:text="Login"
            android:textColor="#fff"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>